results/92a7a61a36f39197ff5eb4d09fc14397/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper({fitarraystring}, emcee, m,C, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 92a7a61a36f39197ff5eb4d09fc14397, {modelStrings},   argslist = (x, 0.54, data)
                                                           ^
SyntaxError: invalid syntax
